non-msrv-tests/tests/ui/zeroize/comma.rs
#[derive(derive_where::DeriveWhere)]
#[derive_where(Clone,,)]
struct Test<T>(T);

fn main() {}
